# web_scraping_varejo.online

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.app/: main.py
.app/ETL/: __init__.py  boot_code.py  extract.py  load.py  main.py  main01.py  models.py  pagina.html  pipeline.py  transform.py  tv_sansung_prices.db
.app/ETL/1.extracao/: extract.py
.app/ETL/2.transformacao/: extract.py
.app/ETL/3.carregamento/: extract.py  load.py  tv_sansung_prices.db
.app/ETL/data/: tv_sansung_prices.db
.app/ETL/tests/: extract.py  test_integration.py  test_unitatios.py  transform.py
.github/: ci.yml
tests copy/: extract.py  load.py  test_integration.py  test_unitatios.py  transform.py
